feat: complete task #530 - A69: A credit on media assets
